2006-11-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Do not require frequency as it's not required for files.
	Only pass freq and pids to dvbsrc not to filesrc as well.
	Make sure FILE uses identity sync=true.

2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Device has a default, don't require it for S and T.

2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Add pixel-aspect-ratio property.

2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Use bi-linear video scaling.

2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Add device property so we can actually select adapter we want
	to use for DVB-S and DVB-T.
	Require filename parameter for dvb-type: FILE.

2006-11-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  remove pygtk dep

2006-11-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* flumotion/component/dvb/dvb.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_sample_admin_gtk.py:
	* flumotion/test/test_sample_common.py:
	* po/Makevars:
	* po/POTFILES.in:
	* po/fr.po:
	* po/nl.po:
	  fix up bits and pass make distcheck

2006-11-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* conf/dvb-t.xml:
	Add sample flow for DVB-T, this gives TV3 in Barcelona.

2006-11-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Add option to get a transport stream from file.
	This requires dvb-type property set to FILE.

2006-10-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Log the dvb card's frontend stats.
